Fixed some issues with elements overlapping when on Tablet and Mobile screens

--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -1,5 +1,5 @@
 .outerContainer {
-  height: 100vh;
+  padding: 90px 0;
   padding-bottom: 10px;
   display: flex;
   flex-direction: column;
